Version 0.0.8 (2017-02-nn)
- Got rid of chroot workaround

Version 0.0.7 (2017-02-01)
- Inserted elements are selected as visual feedback
- Focus jumps to end of selection
- Added optional authentication
- Added optional ALLOWED_NETWORKS to restrict access
- Added optional BANNED_IPS to restrict access
- Added optional IP banning if authentication fails
- Added optional persistent settings
- Bugfixes
- Code cleanup

Version 0.0.6 (2017-01-29)
- Added SSL support
- Added HASS restart button
- Added version indicator with link to repo

Version 0.0.5 (2017-01-27)
- Ugly workaround to run configurator.py from somewhere else than HASS-dir (Issue #1)

Version 0.0.4 (2017-01-26)
- Added modal dialogs (displayed when AJAX is done, dismiss with click)

Version < 0.0.4
- Added toolbar
- Added select-elements filled with bootstrap data
- Initial release
- Whatever I forgot